extends VBoxContainer

var new_alfhabet

signal alfha_pressed(alfhabet)


func _on_A_pressed():
	new_alfhabet = "a"
	emit_signal("alfha_pressed", new_alfhabet)


func _on_B_pressed():
	new_alfhabet = "b"
	emit_signal("alfha_pressed", new_alfhabet)


func _on_C_pressed():
	new_alfhabet = "c"
	emit_signal("alfha_pressed", new_alfhabet)


func _on_D_pressed():
	new_alfhabet = "d"
	emit_signal("alfha_pressed", new_alfhabet)


func _on_E_pressed():
	new_alfhabet = "e"
	emit_signal("alfha_pressed", new_alfhabet)


func _on_F_pressed():
	new_alfhabet = "f"
	emit_signal("alfha_pressed", new_alfhabet)


func _on_G_pressed():
	new_alfhabet = "g"
	emit_signal("alfha_pressed", new_alfhabet)


func _on_H_pressed():
	new_alfhabet = "h"
	emit_signal("alfha_pressed", new_alfhabet)
	
	
func _on_I_pressed():
	new_alfhabet = "i"
	emit_signal("alfha_pressed", new_alfhabet)


func _on_J_pressed():
	new_alfhabet = "j"
	emit_signal("alfha_pressed", new_alfhabet)


func _on_K_pressed():
	new_alfhabet = "k"
	emit_signal("alfha_pressed", new_alfhabet)
	

func _on_L_pressed():
	new_alfhabet = "l"
	emit_signal("alfha_pressed", new_alfhabet)


func _on_M_pressed():
	new_alfhabet = "m"
	emit_signal("alfha_pressed", new_alfhabet)


func _on_N_pressed():
	new_alfhabet = "n"
	emit_signal("alfha_pressed", new_alfhabet)


func _on_O_pressed():
	new_alfhabet = "o"
	emit_signal("alfha_pressed", new_alfhabet)


func _on_P_pressed():
	new_alfhabet = "p"
	emit_signal("alfha_pressed", new_alfhabet)


func _on_Q_pressed():
	new_alfhabet = "q"
	emit_signal("alfha_pressed", new_alfhabet)


func _on_R_pressed():
	new_alfhabet = "r"
	emit_signal("alfha_pressed", new_alfhabet)


func _on_S_pressed():
	new_alfhabet = "s"
	emit_signal("alfha_pressed", new_alfhabet)


func _on_T_pressed():
	new_alfhabet = "t"
	emit_signal("alfha_pressed", new_alfhabet)


func _on_U_pressed():
	new_alfhabet = "u"
	emit_signal("alfha_pressed", new_alfhabet)


func _on_V_pressed():
	new_alfhabet = "v"
	emit_signal("alfha_pressed", new_alfhabet)


func _on_W_pressed():
	new_alfhabet = "w"
	emit_signal("alfha_pressed", new_alfhabet)


func _on_X_pressed():
	new_alfhabet = "x"
	emit_signal("alfha_pressed", new_alfhabet)


func _on_Y_pressed():
	new_alfhabet = "y"
	emit_signal("alfha_pressed", new_alfhabet)


func _on_Z_pressed():
	new_alfhabet = "z"
	emit_signal("alfha_pressed", new_alfhabet)



